Rename plugin id to telegram-notifier

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "id": "obsidian-telegram-notifier",
+  "id": "telegram-notifier",
   "name": "Telegram Notifier",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "minAppVersion": "1.5.0",
   "description": "Simple Telegram reminder plugin with presets, inline tasks and working hours.",
   "author": "ADEMSU",
